--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.1",
         "express-validator": "^6.14.2",
         "helmet": "^6.0.0",
+        "mongoose": "^6.7.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.3.3"
     },
