--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NODE_ENV = development
+MONGO_URL=mongodb+srv://codejam:codejam@2022@cluster0.snqlrik.mongodb.net/gentex?retryWrites=true&w=majority
