--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "author": "Muhammad Semeer A <muhammadsemeerali@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "express-validator": "^6.14.2",
         "helmet": "^6.0.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.7.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.3.3"
