--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV = development
-MONGO_URL=mongodb+srv://codejam:codejam@2022@cluster0.snqlrik.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://flexadmin:flexwfh@cluster0.98uxw6v.mongodb.net/Gentex
