--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV = development
-MONGO_URL = mongodb+srv://flexadmin:flexwfh@cluster0.98uxw6v.mongodb.net/Gentex
+MONGO_URL = mongodb+srv://codejam:codejam123@cluster0.snqlrik.mongodb.net/GenTex?retryWrites=true&w=majority
